--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "chart.js": "2.8",
     "core-js": "^3.25.3",
+    "firebase-tools": "^11.16.0",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-chartjs": "^3.4.2",
